--- a/Nodepop/views/filters.ejs
+++ b/Nodepop/views/filters.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='../stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
@@ -12,7 +12,8 @@
       <p>Intention: <%= value.intention%> </p>
       <p>Price: <%= value.price%> </p>
       <p>Tags: <%- JSON.stringify(value.tags).replace(/"|\[|\]/g, "") %> </p>
+      <img src="../images/<%=value.photo%>" alt="<%=value.photo%>"/>
     <% }) %>
-    <h3>Tags</h3>
+    <h3>Filtered by:</h3>
       <p> <%- JSON.stringify(query).replace(/"|\[|\]/g, "") %> </p>
   </body>
